# OpenGLTest

./: .gitignore  CMakeLists.txt  README.md
Code/: CMakeLists.txt
Code/MFCGUI/: CMakeLists.txt  CalendarBar.cpp  CalendarBar.h  MainFrm.cpp  MainFrm.h  OGLGUI.APS  OGLGUI.cpp  OGLGUI.h  OGLGUI.rc  OGLGUIDoc.cpp  OGLGUIDoc.h  OGLGUIView.cpp  OGLGUIView.h  ReadMe.txt  resource.h  stdafx.cpp  stdafx.h  targetver.h
Code/MFCGUI/res/: OGLGUI.rc2  ribbon.mfcribbon-ms
Code/MyOpenGL/: CMakeLists.txt  OpenGL.cpp  OpenGL.def  OpenGL.h  OpenGLObject.cpp  OpenGLObject.h  ReadMe.txt  Resource.h  Shader.cpp  Shader.h  Vec3.cpp  Vec3.h  common.h  macro.h
Code/MyOpenGL/Resource/ShaderFile/: ShaderToy_1.glsl  Toy2.glsl  lightLine.glsl  sphere.glsl  vertex.glsl  water.glsl
Code/MyOpenGL/resHead/: HermeneusOne-Regular.ttf.bin.h  Settings.xaml.bin.h
Code/OrkRender/: CMakeLists.txt
Code/OrkRender/ork/: CMakeLists.txt
